After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752098 - crash when playing an rtsp stream
crash when playing an rtsp stream
Status: RESOLVED FIXED
Product: clutter-gst
Classification: Other
Component: general
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: clutter-gst-maint
clutter-gst-maint
Depends on:
Blocks:
 
 
Reported: 2015-07-07 21:20 UTC by Fabrice Bellet
Modified: 2015-09-13 17:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
valgrind snippet (5.57 KB, text/plain)
2015-07-07 21:20 UTC, Fabrice Bellet
  Details
gdb logging (14.33 KB, text/plain)
2015-07-09 13:39 UTC, Fabrice Bellet
  Details
output of totem with GST_DEBUG=5 (text compressed with xz) (1.10 MB, application/octet-stream)
2015-07-09 13:45 UTC, Fabrice Bellet
  Details
video-sink: force upload of video frames when creating textures (2.07 KB, patch)
2015-07-09 15:29 UTC, Lionel Landwerlin
committed Details | Review

Description Fabrice Bellet 2015-07-07 21:20:14 UTC
Created attachment 307041 [details]
valgrind snippet

I'm running Fedora 22. I setup a sample rtsp server, using the test-video example program from gst-rtsp-server. Then I create a playlist text file containing three occurrences of the same rtsp stream "rtsp://127.0.0.1:8554/test", and I launch totem on this playlist file. I switch to the next stream and/or prev stream a couple of times, and it frequently causes a crash in totem, in texstore.c:137 from mesa. I could isolate the problem in valgrind too (see attachment file).
Comment 1 Bastien Nocera 2015-07-07 22:57:25 UTC
Looks like clutter-gst or lower down.
Comment 2 Lionel Landwerlin 2015-07-08 21:12:27 UTC
I created a .pls file with 3 items at rtsp://127.0.0.1:8554/test and pressing next/prev in totem doesn't reproduce the crash.
Could you give the version of gstreamer/mesa/clutter/cogl you're running?
Thanks.
Comment 3 Fabrice Bellet 2015-07-09 13:38:25 UTC
It may require several retries to trigger the bug. In my experience, if the bug doesn't show up on the first or second click to the next-stream forward button of totem, I have a better luck if I kill and restart the process.

The versions are those from Fedora 22 (with updates testing enabled):
 * gstreamer : 1.4.5
 * mesa: 10.6.1
 * cogl: 1.20.0
 * clutter: 1.22.4

I launch the rtsp server with this command (these parameters are maybe not coherent as a whole, but they allowed me to generate a crash):

./test-launch "( videotestsrc is-live=1 do-timestamp=1   ! video/x-raw,framerate=50/1,width=720,height=576,pixel-aspect-ratio=16/11  ! aspectratiocrop aspect-ratio=20/11 async-handling=1 ! x264enc  tune=zerolatency bitrate=500 threads=4 interlaced=1 !   video/x-h264,profile=main !  rtph264pay name=pay0 )"
Comment 4 Fabrice Bellet 2015-07-09 13:39:40 UTC
Created attachment 307140 [details]
gdb logging

This is a gdb logging session, when the crash occurred.
Comment 5 Fabrice Bellet 2015-07-09 13:45:54 UTC
Created attachment 307141 [details]
output of totem with GST_DEBUG=5 (text compressed with xz)

This is the GST_DEBUG output of totem when the crash occured. My guess is that the memory access causing the sigsegv (0x7fffbb9d90a0) in inside the freeed memory at timestamp 0:00:05.903008726 : 
0:00:05.903008726  7406       0x67bf00 DEBUG             GST_MEMORY gstmemory.c:87:_gst_memory_free: free memory 0x7fffbb9d9010

I can reproduce it with CLUTTER_DEBUG flags if needed.
Comment 6 Lionel Landwerlin 2015-07-09 15:29:55 UTC
Created attachment 307155 [details] [review]
video-sink: force upload of video frames when creating textures
Comment 7 Lionel Landwerlin 2015-07-09 15:32:56 UTC
If you have the change to give a try to this patch, let me know.
I think it should fix the problem, but can't reproduce on my machine.
Will make a new release by end of the week.
Thanks.
Comment 8 Fabrice Bellet 2015-07-09 17:21:08 UTC
I tried the patch, made tests, ran valgrind, and the crash seems to be fixed. Thanks!
Comment 9 Lionel Landwerlin 2015-09-13 17:51:13 UTC
Review of attachment 307155 [details] [review]:

Was push to 3.0 branch a while ago.