video-sink: force upload of video frames when creating textures

https://bugzilla.gnome.org/show_bug.cgi?id=752098